fix tag mobile spacing

--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -407,6 +407,10 @@ section
         flex-wrap: wrap
         justify-content: flex-start
         align-items: center
+        margin-block-start: 1em
+        margin-block-end: 1em
+        margin-inline-start: 0
+        margin-inline-end: 0
         padding-inline-start: 0
 
         .tagHeader
